--- a/src/partial/header.ejs
+++ b/src/partial/header.ejs
@@ -19,7 +19,7 @@
                       src="/assets/img/logo_notext.png" alt="Logo" /> </a>
                   
                 </div>
-                <div style="display: inline-block; line-height: 120px;">
+                <div class="company-text">
                   <p class="company-name">CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</p>
                 </div>
               </div>
@@ -82,8 +82,8 @@
                     href="/tin-tuc-su-kien.html" class="<%= page === 'tin-tuc-su-kien' ? 'current' : '' %>"><span>Tin Tức Sự
                       Kiện</span></a><span class="mobile_arrow"><i class="fa fa-angle-right"></i><i
                       class="fa fa-angle-down"></i></span></li>
-                <li id="mobile-menu-item-94" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'gioi-thieu' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
-                    href="/lien-he.html" class="<%= page === 'gioi-thieu' ? 'current' : '' %>"><span>Liên Hệ</span></a><span
+                <li id="mobile-menu-item-94" class="menu-item menu-item-type-post_type menu-item-object-page <%= page === 'lien-he' ? 'current-menu-item page_item current_page_item active' : '' %>"><a
+                    href="/lien-he.html" class="<%= page === 'lien-he' ? 'current' : '' %>"><span>Liên Hệ</span></a><span
                     class="mobile_arrow"><i class="fa fa-angle-right"></i><i class="fa fa-angle-down"></i></span>
                 </li>
               </ul>
@@ -138,7 +138,7 @@
                       src="/assets/img/logo_notext.png" alt="Logo" /> </a> </a>
                      
                 </div>
-                <div style="display: inline-block; line-height: 120px;">
+                <div class="company-text">
                   <p class="company-name">MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</p>
                 </div>
               </div>
