--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8" />
