- update content for news and project detail

--- a/src/bat-dong-san.ejs
+++ b/src/bat-dong-san.ejs
@@ -44,10 +44,10 @@
                     <div class="project-list wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
-                          <h2 class="title_header">DỰ ÁN BẤT ĐỘNG SẢN NHÀ ĐẤT VIỆT NAM 2023</h2>
+                          <h2 class="title_header">THÔNG TIN DỰ ÁN BẤT ĐỘNG SẢN</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
-                          <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất 2023. Tại đây <span style="color:#ff0000;"><strong>
-                            CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất năm 2023.</p></div>
+                          <div class="services_text"><p style="text-align: justify;">Tổng hợp danh sách các dự án bất động sản, dự án căn hộ chung cư giá rẻ, dự án cao cấp mới nhất. Tại đây <span style="color:#ff0000;"><strong>
+                            CÔNG TY CỔ PHẦN ĐẦU TƯ CÔNG NGHỆ MINH ANH</strong></span> cung cấp đầy đủ tất cả thông tin về chủ đầu tư dự án, pháp lý, tiến độ xây dựng kèm theo bảng giá bán chi tiết của dự án nhà ở cập nhật mới nhất.</p></div>
                           <div class="row project-layout">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>Đang triển khai</span>
@@ -68,13 +68,13 @@
                                   <p>Minh Anh Park Hill Củ Chi, siêu phẩm mới của chủ đầu tư Minh Anh triển khai xây
                                     dựng tại khu...</p>
                                   <div class="property-desc-bottom">
-                                    <div class="property-bottom-list">
+                                    <!-- <div class="property-bottom-list">
                                       <ul>
                                         <li> <img src="/assets/img/bds/icon-6.png" alt="icon dien tich" /> <span>50-200m2</span> </li>
                                         <li> <img src="/assets/img/bds/icon-7.png" alt="icon phong ngu" /> <span>2-4</span> </li>
                                         <li> <img src="/assets/img/bds/icon-8.png" alt="icon phong tam" /> <span>1-3</span> </li>
                                       </ul>
-                                    </div>
+                                    </div> -->
                                   </div>
                                   <div class="property-meta">
                                     <div class="row">
