--- a/src/bds/minh-anh-park-hill-cu-chi.ejs
+++ b/src/bds/minh-anh-park-hill-cu-chi.ejs
@@ -73,26 +73,29 @@
                       <p>- Số lượng nhà phố: 163 căn</p>
                       <p>- Loại hình sản phẩm đa dạng: từ Khu Nhà liên kế, nhà phố thương mại, shophouse.</p>
                       <p>- Không gian xanh: khuôn viên cây xanh, tiểu cảnh, hồ nước,…</p>
+                        </br>
                       <p><strong>Ưu điểm vượt trội của Dự án Minh Anh Park Hill:</strong></p>
+                        </br>
                       <p>- Đây là một dòng sản phẩm có giá bán hợp với túi tiền của nhiều dân cư có thu nhập trung bình.</p>
                       <p>- Chủ đầu tư uy tín, có thương hiệu, tiềm lực tài chính tốt và có kinh nghiệm trong phát triển bất động sản.</p>
                       <p>- Dù là những nhà liên kế, nhà phố thương mại, shophouse Củ Chi giá thấp hơn so với nhiều dự án khác nhưng về mặt chất lượng và tiện ích cũng được đồng bộ không kém gì những dự án nhà phố, nhà ở cao cấp.</p>
-                      <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_phoicanh.PNG"></p>
-                      <p style="text-align:center"><span style="font-size:12px"><em>Phối cảnh Dự án Minh Anh park Hill</em></span></p>
+                      <!-- <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_phoicanh.PNG"></p>
+                      <p style="text-align:center"><span style="font-size:12px"><em>Phối cảnh Dự án Minh Anh park Hill</em></span></p> -->
 
-
+                        </br>
                       <h5><span style="color:#0000FF"><strong>II. VỊ TRÍ DI CHUYỂN, HỆ THỐNG GIAO THÔNG TẠI CỦ CHI</strong></span></h5>
                         </br>
                       <p><strong>Dự án Minh Anh Park Hill</strong> tọa lạc tại tỉnh lộ 8, thuộc khu vực Tây Bắc của TP. Hồ Chí Minh tạo thành trục tam giác vàng TP HCM – Bình Dương – Tây Ninh. Những tuyến đường huyết mạch xung quanh dự án như quốc lộ 1A, Quốc lộ 22, tỉnh lộ 8, đường Võ Văn Bích, tỉnh lộ 9… tạo cho dự án có vị thế đắc địa khi đây là khu vực được quy hoạch mở rộng để sẵn sàng cho việc bùng nổ dân số và hàng loạt tiện ích được xây dựng trong những năm tới nhằm biến Củ Chi thành điểm đến được lựa chọn đầu tiên an cư, đầu tư của các tập đoàn lớn trong và ngoài nước.</p>
                       <p>Tuy xa trung tâm nhưng <strong>Khu Dân cư Minh Anh Park Hill</strong> lại thuộc khu vực phát triển nhanh chóng, kết cấu hạ tầng dần hoàn thiện đồng bộ đáp ứng đầy đủ nhu cầu đi lại, kinh tế tập trung của tổ hợp công nghiệp.</p>
                       
-                      
+                        </br>
                       <h5><span style="color:#0000FF"><strong>III. TIỆN ÍCH XUNG QUANH DỰ ÁN MINH ANH PARK HILL</strong></span></h5>
                         </br>
                       <p>Theo quy hoạch, nhiều khu giải trí tầm cỡ quốc tế được mở ra tại <strong>Củ Chi</strong>. Hiện tại, khu đô thị Tây Bắc <strong>6.000ha</strong> đang triển khai xây dựng. Công viên Quốc tế Tân Phú Trung quy mô 300ha, làng Đại Học Quốc Tế diện tích 1.000ha tại Tân Phú Trung, Thảo Cầm Viên 500ha tại An Nhơn Tây… và khách sạn, nhà hàng đang mọc ra ngày càng nhiều…</p>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_tienich.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Tiện ích kết nối khu vực của Minh Anh Park Hill</em></span></p>
-                      <p>Bên cạnh đó, dự kiến sẽ có khoảng 30 trường Đại Học dời về Củ Chi và mỗi trường sẽ cần khoảng 10 đến 30ha đất. Đồng thời với điều đó sẽ có khoảng 30 bệnh viện với quy mô lớn nhỏ khác nhau sẽ được xây dựng mới tại Củ Chi và chỉ có Củ Chi mới đủ diện tích “đất sạch” với cảnh quan phong thủy phù hợp với người Á Đông và tiêu chuẩn quốc tế. Xung quanh là những tiện ích ngoại khu hiện hữu như chợ, siêu thị, trung tâm hành chính, UBND, trung tâm thương mại, siêu thị, trường học, bệnh viện,…Chính vì những tiện nghi “vàng” mà <strong>khu dân cư Minh Anh park Hill </strong> được hưởng lợi trong tương lai</p>
+                      <p>Bên cạnh đó, dự kiến sẽ có khoảng 30 trường Đại Học dời về Củ Chi và mỗi trường sẽ cần khoảng 10 đến 30ha đất. Đồng thời với điều đó sẽ có khoảng 30 bệnh viện với quy mô lớn nhỏ khác nhau sẽ được xây dựng mới tại Củ Chi và chỉ có Củ Chi mới đủ diện tích “đất sạch” với cảnh quan phong thủy phù hợp với người Á Đông và tiêu chuẩn quốc tế. Xung quanh là những tiện ích ngoại khu hiện hữu như chợ, siêu thị, trung tâm hành chính, UBND, trung tâm thương mại, siêu thị, trường học, bệnh viện,…Chính vì những tiện nghi “vàng” mà <strong>khu dân cư Minh Anh Park Hill </strong> được hưởng lợi trong tương lai</p>
+                        </br>
                       <div class="bg_lienketvung">
                         <div class="row row-full-width align-middle align-center">
                           <div style="max-width: 45%;" class="col small-12 large-6 medium-12 p0 left-img">
@@ -121,11 +124,12 @@
                           </div>
                         </div>
                       </div>
-                      
+                        </br>
                       <h5><span style="color:#0000FF"><strong>IV. MẶT BẰNG KHU DÂN CƯ MINH ANH PARK HILL</strong></span></h5>
                         </br>
                       <p style="text-align:center"><img alt="" src="/assets/img/bds/minhanh_cuchi_matbang.PNG"></p>
                       <p style="text-align:center"><span style="font-size:12px"><em>Mặt bằng tổng thể Dự án Minh Anh Park Hill</em></span></p>
+                        </br>
                       <h5><span style="color:#0000FF"><strong>V. GIÁ BÁN KHU DÂN C Ư MINH ANH PARK HILL NHƯ THẾ NÀO?</strong></span></h5>
                         </br>
                       <p>Quỹ đất rộng lớn nên giá đất nền Củ Chi hiện tại ở mức rẻ và hợp lý của Thành Phố Hồ Chí Minh.</p>
