--- a/src/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.ejs
+++ b/src/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8" />
@@ -56,7 +56,7 @@
                     </div>
                     <div class="post_content_minhanh">
                       <h3>CAN VITAMIN E BE REDUCED OR REPLACED IN LIVESTOCK FEED ?</h3>
-                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020
+                      <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2022
                       </div>
                       <div class="noidung-s">
                         <p>Vitamin E is an expensive type of vitamin, and at times, it can be very costly. Therefore, most premix and animal feed manufacturers maintain strict control over supplementing vitamin E. With many years of experience working as an on-site nutrition expert, I have observed that the feed often contains only half the recommended amount of vitamin E as suggested by the National Research Council (NRC) for monogastric animals.</p>
@@ -101,7 +101,7 @@
                                   <h4><a
                                       href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">CAN VITAMIN E BE REDUCED OR REPLACED IN LIVESTOCK FEED ?
                                     </a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2022</div>
                                   <p>Vitamin E can be partially substituted or economized by using other antioxidants, but it can never be fully replaced; this article explains why vitamin E is crucial for&#8230;</p>
                                   <div class="view_more_relasted"><a
                                       href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">Read more</a></div>
@@ -121,7 +121,7 @@
                                   <h4><a
                                       href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html">BUFFER VALUE CONTROL IN PIGLET FEED
                                     </a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2021</div>
                                   <p>Practical formulation of modern piglet diets requires considering the buffering capacity of the ration, with the target buffer value being below 650 meq/kg. In any intensive pig farming system&#8230;</p>
                                   <div class="view_more_relasted"><a
                                       href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html">Read more</a></div>
