--- a/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
+++ b/src/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8" />
@@ -139,7 +139,7 @@
                                   <h4><a
                                       href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">CAN VITAMIN E BE REDUCED OR REPLACED IN LIVESTOCK FEED ?
                                     </a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2022</div>
                                   <p>Vitamin E can be partially substituted or economized by using other antioxidants, but it can never be fully replaced; this article explains why vitamin E is crucial for&#8230;</p>
                                   <div class="view_more_relasted"><a
                                       href="/en/news/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi-en.html">Read more</a></div>
@@ -159,7 +159,7 @@
                                   <h4><a
                                       href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html">BUFFER VALUE CONTROL IN PIGLET FEED
                                     </a></h4>
-                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2020</div>
+                                  <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 June | 2021</div>
                                   <p>Practical formulation of modern piglet diets requires considering the buffering capacity of the ration, with the target buffer value being below 650 meq/kg. In any intensive pig farming system&#8230;</p>
                                   <div class="view_more_relasted"><a
                                       href="/en/news/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con-en.html">Read more</a></div>
