--- a/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
+++ b/src/tin-tuc/dieu-chinh-che-do-dinh-duong-cho-heo-nai.ejs
@@ -34,7 +34,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('../partial/header.ejs', { page: '' , lang: 'vi' , engPage: '/en/' }) %>
+      <%- include('../partial/header.ejs', { page: '' , lang: 'vi' , engPage: '/en/news/dieu-chinh-che-do-dinh-duong-cho-heo-nai-en.html' }) %>
         <div class="content content_top_margin">
           <div class="content_inner  ">
             <div class="container">
@@ -187,7 +187,7 @@
                                         href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
                                         thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
                                     <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2020</div>
+                                      Sáu | 2022</div>
                                     <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống
                                       oxy
                                       hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý
@@ -211,7 +211,7 @@
                                     <h4><a href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                         soát giá trị đệm trong thức ăn heo con</a></h4>
                                     <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                      Sáu | 2020</div>
+                                      Sáu | 2021</div>
                                     <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm
                                       của
                                       khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất
