--- a/src/en/project.ejs
+++ b/src/en/project.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="vi" prefix="og: http://ogp.me/ns#">
+<html lang="en-US" prefix="og: http://ogp.me/ns#">
 
 <head>
   <meta charset="UTF-8" />
@@ -44,10 +44,10 @@
                     <div class="project-list wpb_column vc_column_container vc_col-sm-12">
                       <div class="vc_column-inner ">
                         <div class="wpb_wrapper">
-                          <h2 class="title_header">VIETNAM REAL ESTATE PROJECT 2023</h2>
+                          <h2 class="title_header">PROJECT INFORMATION</h2>
                           <div class="br_line"><img src="/assets/img/bds/line.png" alt="icon line"></div>
-                          <div class="services_text"><p style="text-align: justify;">Compilation of real estate projects, affordable apartment projects, and latest luxury projects in 2023. <span style="color:#ff0000;"><strong>
-                            MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</strong></span> provides comprehensive information about the project's investors, legal aspects, construction progress, and detailed price list of the residential project with the latest update in 2023.</p></div>
+                          <div class="services_text"><p style="text-align: justify;">Compilation of real estate projects, affordable apartment projects, and latest luxury projects. <span style="color:#ff0000;"><strong>
+                            MINH ANH TECHNOLOGY INVESTMENT JOINT STOCK COMPANY</strong></span> provides comprehensive information about the project's investors, legal aspects, construction progress, and detailed price list of the residential project with the latest update.</p></div>
                           <div class="row project-layout">
                             <div class="col-md-4 col-sm-6 col-xs-12">
                               <div class="single-property"> <span>In progress</span>
@@ -67,13 +67,13 @@
                                 <div class="property-desc">
                                   <p>Minh Anh Park Hill, The new masterpiece developed by Minh Anh Group is being implemented for construction...</p>
                                   <div class="property-desc-bottom">
-                                    <div class="property-bottom-list">
+                                    <!-- <div class="property-bottom-list">
                                       <ul>
                                         <li> <img src="/assets/img/bds/icon-6.png" alt="icon dien tich" /> <span>50-200m2</span> </li>
                                         <li> <img src="/assets/img/bds/icon-7.png" alt="icon phong ngu" /> <span>2-4</span> </li>
                                         <li> <img src="/assets/img/bds/icon-8.png" alt="icon phong tam" /> <span>1-3</span> </li>
                                       </ul>
-                                    </div>
+                                    </div> -->
                                   </div>
                                   <div class="property-meta">
                                     <div class="row">
