--- a/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
+++ b/src/tin-tuc/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi.ejs
@@ -34,7 +34,7 @@
   itemscope itemtype="http://schema.org/WebPage">
   <div class="wrapper">
     <div class="wrapper_inner">
-      <%- include('../partial/header.ejs', { page: '', lang: 'vi', engPage: '/en/' }) %>
+      <%- include('../partial/header.ejs', { page: '', lang: 'vi', engPage: '/en/news/6-buoc-trong-lap-cong-thuc-thuc-an-chan-nuoi-en.html' }) %>
       <div class="content content_top_margin">
         <div class="content_inner  ">
           <div class="container">
@@ -219,7 +219,7 @@
                                       href="/tin-tuc/co-the-cat-giam-hoac-thay-the-vitamin-e-trong-thuc-an-chan-nuoi.html">Có
                                       thể cắt giảm hoặc thay thế vitamin E trong thức ăn chăn nuôi ?</a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
+                                    Sáu | 2022</div>
                                   <p>Vitamin E có thể được thay thế hoặc tiết kiệm bằng cách sử dụng các chất chống oxy
                                     hóa khác, nhưng không bao giờ thay thế được hoàn toàn; bài viết này giải thích lý do
                                     vì sao vitamin E rất quan trọng đối với&#8230;</p>
@@ -243,7 +243,7 @@
                                       href="/tin-tuc/kiem-soat-gia-tri-dem-trong-thuc-an-heo-con.html">Kiểm
                                       soát giá trị đệm trong thức ăn heo con</a></h4>
                                   <div class="time_date"><span aria-hidden="true" class="icon_clock"></span> 20 Tháng
-                                    Sáu | 2020</div>
+                                    Sáu | 2021</div>
                                   <p>Thực tiễn xây dựng khẩu phần thức ăn heo con hiện đại cần tính đến khả năng đệm của
                                     khẩu phần, mục tiêu kiểm soát khả năng đệm đạt dưới 650 meq/kg. &nbsp; Trong bất kỳ
                                     hệ thống chăn nuôi heo thâm canh nào cũng&#8230;</p>
